--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 13 20:08:53 GET 2021
-sdk.dir=C\:\\Users\\SandroPC\\AppData\\Local\\Android\\Sdk
+#Mon Mar 15 19:15:35 GET 2021
+sdk.dir=C\:\\Users\\Devi\\AppData\\Local\\Android\\Sdk
