PublicPage connected to Firebase Data and update UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:usesCleartextTraffic="true">
 
         <activity
+            android:windowSoftInputMode="adjustResize"
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/LightMode.NoActionBar">
