--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
             android:windowSoftInputMode="adjustResize"
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/LightMode.NoActionBar">
+            android:theme="@style/LightMode.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
