--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.4'
     implementation 'com.google.android.gms:play-services-safetynet:15.0.1'
-
+    implementation 'com.google.maps.android:android-maps-utils:2.2.4'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
 
